Fixed styling for about page

--- a/about.html
+++ b/about.html
@@ -5,11 +5,11 @@ permalink: /about/
 ---
 
 <div class="row">
-  <div class="col-sm-4">
+  <div class="col-xs-12 col-md-4">
     <img src="{{ '/images/photo-large.jpg' | prepend:site.baseurl }}" alt="photo-large" class="photo-large">
   </div>
 
-  <div class="col-sm-8">
+  <div class="col-xs-12 col-md-8">
     <p>
       Hello! My name is Artem and I like blogging!
     </p>
@@ -93,7 +93,7 @@ permalink: /about/
 </div>
 
 <div class="row">
-  <div class="col-sm-12">
+  <div class="col-xs-12">
     <p>And the topics listed below dominate on this blog.</p>
 
     <ul class="media-list">
