--- a/about.html
+++ b/about.html
@@ -61,7 +61,7 @@ permalink: /about/
         <div class="carousel-item">
           <img src="{{'/images/photo-samples/sample7.jpg'|prepend:site.baseurl}}" alt="">
 
-          <div class="carousel-caption">Park Ojcówski, Poland</div>
+          <div class="carousel-caption">Park Ojcowski, Poland</div>
         </div>
 
         <div class="carousel-item">
