--- a/about.html
+++ b/about.html
@@ -98,7 +98,7 @@ permalink: /about/
     <p>And the topics listed below dominate on this blog.</p>
 
     <div class="row">
-      <div class="col-xs-6">
+      <div class="col-xs-12 col-lg-6">
         <ul class="media-list">
           <li class="media">
             <div class="media-left"><img src="{{ '/images/camera.jpg' }}" alt="" class="media-object"></div>
@@ -148,7 +148,7 @@ permalink: /about/
         </ul>
       </div>
 
-      <div class="col-xs-6">
+      <div class="col-xs-12 col-lg-6">
         <ul class="media-list">
           <li class="media">
           <div class="media-left"><img src="{{ '/images/rails.png' | prepend:site.baseurl}}" alt="" class="media-object"></div>
