Fixed many-many-many posts. Added favicon

--- a/_posts/tumblr/2014-07-22-php-blog-part-1.html
+++ b/_posts/tumblr/2014-07-22-php-blog-part-1.html
@@ -12,7 +12,7 @@ tumblr_url: http://shybovycha.tumblr.com/post/92523360106/php
 
 <p>Нехай у нас є який-небудь самий стандартний, простий, перший блог на PHP. Така собі кучка файлів для созданія постов, списка постов, перегляду оддєльного поста, реєстрації, логіна і логаута, камєнтіруванія… Просто купа файлів. В цих файлах у нас і HTML, і PHP код.</p>
 
-<p><!-- more --></p>
+<!--more-->
 
 <p>Приблизно це виглядить отак:</p>
 
