--- a/_posts/tumblr/2014-07-28-php-blog-part-3.html
+++ b/_posts/tumblr/2014-07-28-php-blog-part-3.html
@@ -12,9 +12,7 @@ tumblr_url: http://shybovycha.tumblr.com/post/93106798026
 
 <p>Будь готов! В цій главі ми полностью переробим блог! Він не буде працювати (як раньше) аж до кінця домашнього заданія; код буде магічним; придеться пару раз удалять <strong>весь</strong> код з деяких файлів! Але в сухом остаткє, потом має стати ну дуже прикольно розробляти його дальше.</p>
 
-
-
-<p><!-- more --></p>
+<!--more-->
 
 <h2>RIP, блог!</h2>
 
