--- a/_posts/tumblr/2014-09-04-2014.html
+++ b/_posts/tumblr/2014-09-04-2014.html
@@ -6,7 +6,10 @@ tags:
 - travel
 tumblr_url: http://shybovycha.tumblr.com/post/96614436936/2014
 ---
+
 <p>На День Незалежності 2014го року, команда наших туристів-любителів вирішила піти в похід до Карпат. Три вихідних, часу достатньо, корисно, приємно&hellip; І так склалось, що в за день..два до походу двоє потенційних учасників відмовились від цієї пропозиції і протягом кількох хвилин їх місця вже зайняли ми з моїм другом, Дмитром FireMage.</p>
+
+<!--more-->
 
 <p>Рюкзаки всі складали або за власним досвідом, або за словами знайомих які вже встигли побувати в горах, або за словами знайомих, які ще не бували в горах. У мене це було більш чи менш раціональне пакування всього того, що було акуратно розкидане по кімнаті. Хоча, вітровку та вібрами я придбав за дві години до від’їзду (о, ЯК я помилився!..). Дмитрик рюкзака збирав ледь не в ніч перед виїздом - робота, всьо такоє&hellip; І в останню годину ми в чятіку ще й мірялись - кому скільки треба викинути з рюкзака. У когось рюкзак заважив 15 кг і йому це здалось забагацько, у когось - 17 кг і це йому здавалось нормальним (о, який я був наївний!..)&hellip; Провіант закупила Наталка. В наш мікро-автобус він вліз, але його ще треба було розпихати по рюкзакам. Цього рєбята з 17-кілограмовими рюкзаками не врахували&hellip;</p>
 
