--- a/_posts/tumblr/2015-02-17-playing-around-with-blender.html
+++ b/_posts/tumblr/2015-02-17-playing-around-with-blender.html
@@ -7,4 +7,17 @@ tags:
 - 3d
 tumblr_url: http://shybovycha.tumblr.com/post/111264021826/playing-around-with-blender
 ---
-<img src="/tumblr_files/tumblr_njwqqioF171qio88bo1_1280.png"/><br/><img src="/tumblr_files/tumblr_njwqqioF171qio88bo2_r1_1280.png"/><br/><br/><p>Playing around with Blender</p>
+
+<div class="row">
+    <div class="col-xs-12 col-md-6">
+        <img src="/tumblr_files/tumblr_njwqqioF171qio88bo1_1280.png" class="image-responsive" />
+    </div>
+
+    <div class="col-xs-12 col-md-6">
+        <img src="/tumblr_files/tumblr_njwqqioF171qio88bo2_r1_1280.png" class="image-responsive" />
+    </div>
+</div>
+
+<div class="row">
+    <div class="col-xs-12">Playing around with Blender</div>
+</div>
