--- a/_posts/tumblr/2015-03-04-reworked-materials-for-my-rifle.html
+++ b/_posts/tumblr/2015-03-04-reworked-materials-for-my-rifle.html
@@ -7,4 +7,13 @@ tags:
 - 3d
 tumblr_url: http://shybovycha.tumblr.com/post/112718503266/reworked-materials-for-my-rifle
 ---
-<img src="/tumblr_files/tumblr_nkpfpqQNbY1qio88bo1_r1_1280.png"/><br/><p>Reworked materials for my rifle</p>
+
+<div class="row">
+    <div class="col-xs-12">
+        <img src="/tumblr_files/tumblr_nkpfpqQNbY1qio88bo1_r1_1280.png" class="image-responsive" />
+    </div>
+</div>
+
+<div class="row">
+    <div class="col-xs-12">Reworked materials for my rifle</div>
+</div>
