--- a/_posts/tumblr/2015-06-24-why-learn-assembly.html
+++ b/_posts/tumblr/2015-06-24-why-learn-assembly.html
@@ -8,7 +8,12 @@ tags:
 - discussion
 tumblr_url: http://shybovycha.tumblr.com/post/122324103461
 ---
-<p>Мій друг запитав мене сьогодні “а от ці всі асемблери, їм взагалі є застосування?”. Самому мені було важко вигадати застосування асемблера сьогодні. Тому для нього <em>(і для себе також)</em> я вирішив перекласти частину вступу з матеріалів мого ВУЗу з предмету <em>“низькорівневе програмування”</em>.</p>
+
+<p>
+Мій друг запитав мене сьогодні “а от ці всі асемблери, їм взагалі є застосування?”. Самому мені було важко вигадати застосування асемблера сьогодні. Тому для нього <em>(і для себе також)</em> я вирішив перекласти частину вступу з матеріалів мого ВУЗу з предмету <em>“низькорівневе програмування”</em>.
+<br>
+Навіть не зважаючи на те, що я вже писав про можливе <a href="{{ post_url 2015-04-23-assembly-in-c-programs }}">застосування ассемблера</a>.
+</p>
 
 <!--more-->
 
