--- a/_posts/tumblr/2015-01-09-microsoft-error-messages-cipher.html
+++ b/_posts/tumblr/2015-01-09-microsoft-error-messages-cipher.html
@@ -10,7 +10,8 @@ tumblr_url: http://shybovycha.tumblr.com/post/107622125006/microsoft-error-messa
 ---
 <p>I have a T-SQL trigger creation script, which runs OK:</p>
 
-<pre><code>CREATE TRIGGER data_modified ON Northwind.dbo.Customers FOR INSERT, UPDATE, DELETE
+{% highlight sql %}
+CREATE TRIGGER data_modified ON Northwind.dbo.Customers FOR INSERT, UPDATE, DELETE
 AS
 
 declare @rows as int;
@@ -37,17 +38,19 @@ else
 begin
     print 'deleted ' + @rows + ' rows';
 end
-</code></pre>
+{% endhighlight %}
 
 <p>Yet, when I run some <code>INSERT</code> query, I got an error saying:</p>
 
-<pre><code>Msg 245, Level 16, State 1, Procedure data_modified, Line 21
+{% highlight sql %}
+Msg 245, Level 16, State 1, Procedure data_modified, Line 21
 Conversion failed when converting the varchar value 'inserted ' to data type int.
-</code></pre>
+{% endhighlight %}
 
 <p>Let&rsquo;s look onto the source of that trigger, at line 18:</p>
 
-<pre><code>USE [Northwind]
+{% highlight sql %}
+USE [Northwind]
 GO
 /****** Object:  Trigger [dbo].[data_modified]    Script Date: 09.01.2015 18:18:14 ******/
 SET ANSI_NULLS ON
@@ -81,28 +84,32 @@ GO
     begin
         print 'deleted ' + @rows + ' rows';
     end
-</code></pre>
+{% endhighlight %}
 
 <p>Here&rsquo;s the error:</p>
 
-<pre><code>if exists(select * from inserted)
-</code></pre>
+{% highlight sql %}
+if exists(select * from inserted)
+{% endhighlight %}
 
 <p>But wait, that can&rsquo;t be true!</p>
 
 <p>The problem is a bit deeper, with the <code>@rows</code> variable:</p>
 
-<pre><code>print 'updated ' + @rows + ' rows';
-</code></pre>
+{% highlight sql %}
+print 'updated ' + @rows + ' rows';
+{% endhighlight %}
 
 <p>while being declared as:</p>
 
-<pre><code>declare @rows as int;
-</code></pre>
+{% highlight sql %}
+declare @rows as int;
+{% endhighlight %}
 
 <p>It can not be printed right away, so it needs to be cast:</p>
 
-<pre><code>CREATE TRIGGER data_modified ON Northwind.dbo.Customers FOR INSERT, UPDATE, DELETE
+{% highlight sql %}
+CREATE TRIGGER data_modified ON Northwind.dbo.Customers FOR INSERT, UPDATE, DELETE
 AS
 
 declare @rows as int;
@@ -131,6 +138,6 @@ else
 begin
     print 'deleted ' + @rows_s + ' rows';
 end
-</code></pre>
+{% endhighlight %}
 
 <p>Try to guess where&rsquo;s your mistake, using that error message! ;)</p>
