--- a/_posts/tumblr/2015-03-04-creating-some-gun-from-a-rough-primitive-model.html
+++ b/_posts/tumblr/2015-03-04-creating-some-gun-from-a-rough-primitive-model.html
@@ -7,4 +7,17 @@ tags:
 - 3d
 tumblr_url: http://shybovycha.tumblr.com/post/112683246501/creating-some-gun-from-a-rough-primitive-model
 ---
-<img src="/tumblr_files/tumblr_nkoko2Ofx71qio88bo1_1280.png"/><br/><img src="/tumblr_files/tumblr_nkoko2Ofx71qio88bo2_1280.png"/><br/><br/><p>Creating some gun from a rough primitive model with some texture and sculpting. Yet, trying to get some pretty materials on this&hellip;</p>
+
+<div class="row">
+    <div class="col-xs-12 col-md-6">
+        <img src="/tumblr_files/tumblr_nkoko2Ofx71qio88bo1_1280.png" class="image-responsive" />
+    </div>
+
+    <div class="col-xs-12 col-md-6">
+        <img src="/tumblr_files/tumblr_nkoko2Ofx71qio88bo2_1280.png" class="image-responsive" />
+    </div>
+</div>
+
+<div class="row">
+    <div class="col-xs-12">Creating some gun from a rough primitive model with some texture and sculpting. Yet, trying to get some pretty materials on this&hellip;</div>
+</div>
