--- a/_posts/tumblr/2015-03-12-how-did-i-came-over-from-that-to-this.html
+++ b/_posts/tumblr/2015-03-12-how-did-i-came-over-from-that-to-this.html
@@ -7,4 +7,17 @@ tags:
 - blender
 tumblr_url: http://shybovycha.tumblr.com/post/113415599901/how-did-i-came-over-from-that-to-this
 ---
-<img src="/tumblr_files/tumblr_nl3cb9Adqo1qio88bo1_1280.png"/><br/><img src="/tumblr_files/tumblr_nl3cb9Adqo1qio88bo2_1280.png"/><br/><br/><p>How did I came over from that to this&hellip;</p>
+
+<div class="row">
+    <div class="col-xs-12 col-md-6">
+        <img src="/tumblr_files/tumblr_nl3cb9Adqo1qio88bo1_1280.png" class="image-responsive" />
+    </div>
+
+    <div class="col-xs-12 col-md-6">
+        <img src="/tumblr_files/tumblr_nl3cb9Adqo1qio88bo2_1280.png" class="image-responsive" />
+    </div>
+</div>
+
+<div class="row">
+    <div class="col-xs-12">How did I came over from that to this&hellip;</div>
+</div>
