--- a/_posts/tumblr/2014-07-22-php-blog-part-1.html
+++ b/_posts/tumblr/2014-07-22-php-blog-part-1.html
@@ -8,6 +8,19 @@ tags:
 - rtfm
 tumblr_url: http://shybovycha.tumblr.com/post/92523360106/php
 ---
+
+<div class="row">
+    <div class="col-md-6 col-xs-12">
+        {% include references/bro-blog.html %}
+    </div>
+
+    <div class="col-md-6 col-xs-12 text-xs-center text-md-right"></div>
+</div>
+
+<h2>Прєдісловіє</h2>
+
+<p>Дарагой друг! В цих статтях я розкажу тобі як зробить чоткій блог на чотком язику PHP. Розказувать буду просто, шоб всьо було понятно. Ну шо, паєхалі?</p>
+
 <h2>Сістємні трєбованія</h2>
 
 <p>Нехай у нас є який-небудь самий стандартний, простий, перший блог на PHP. Така собі кучка файлів для созданія постов, списка постов, перегляду оддєльного поста, реєстрації, логіна і логаута, камєнтіруванія… Просто купа файлів. В цих файлах у нас і HTML, і PHP код.</p>
