--- a/_posts/tumblr/2014-07-27-php-blog-part-2.html
+++ b/_posts/tumblr/2014-07-27-php-blog-part-2.html
@@ -8,6 +8,15 @@ tags:
 - programming
 tumblr_url: http://shybovycha.tumblr.com/post/92565628101
 ---
+
+<div class="row">
+    <div class="col-md-6 col-xs-12">
+        {% include references/bro-blog.html %}
+    </div>
+
+    <div class="col-md-6 col-xs-12 text-xs-center text-md-right"></div>
+</div>
+
 <h2>Моделі</h2>
 
 <p>Єсть така штука як <strong>MVC, Model-View-Controller</strong>. Це такий прінцип, по якому програма розділяється на три тіпа дєталєй:</p>
