--- a/_posts/tumblr/2014-07-28-php-blog-part-3.html
+++ b/_posts/tumblr/2014-07-28-php-blog-part-3.html
@@ -8,7 +8,16 @@ tags:
 - php
 tumblr_url: http://shybovycha.tumblr.com/post/93106798026
 ---
-<h2>Прєдісловіє</h2>
+
+<div class="row">
+    <div class="col-md-6 col-xs-12">
+        {% include references/bro-blog.html %}
+    </div>
+
+    <div class="col-md-6 col-xs-12 text-xs-center text-md-right"></div>
+</div>
+
+<h2>Прєдупрєждєніє</h2>
 
 <p>Будь готов! В цій главі ми полностью переробим блог! Він не буде працювати (як раньше) аж до кінця домашнього заданія; код буде магічним; придеться пару раз удалять <strong>весь</strong> код з деяких файлів! Але в сухом остаткє, потом має стати ну дуже прикольно розробляти його дальше.</p>
 
