--- a/_posts/tumblr/2014-04-03-jpa-with-sqlite-autoincrement-troubles.html
+++ b/_posts/tumblr/2014-04-03-jpa-with-sqlite-autoincrement-troubles.html
@@ -12,21 +12,24 @@ tumblr_url: http://shybovycha.tumblr.com/post/81573029618/jpa-with-sqlite-autoin
 
 <p>My model definition was like this:</p>
 
-<pre><code>
+{% highlight java %}
 @Entity
 public class Merchant {
     @Id
     @GeneratedValue(strategy=GenerationType.IDENTITY)
     private int id;
     private String name;
-...
+
+    // ...
+
     public Merchant(){   }
-...
-</code></pre>
+
+    // ...
+{% endhighlight %}
 
 <p>And the table creation script was the following:</p>
 
-<pre><code>
+{% highlight sql %}
 CREATE TABLE MERCHANT
 (
     ID INTEGER PRIMARY KEY NOT NULL,
@@ -39,7 +42,7 @@ CREATE TABLE MERCHANT
     MINSUM REAL NOT NULL,
     TOTAL REAL NOT NULL
 );
-</code></pre>
+{% endhighlight %}
 
 <p>I faced some strange exceptions like <em>id could not be null</em>, <em>SQL error or missing database (near &ldquo;values&rdquo;: syntax error)</em>, etc.</p>
 
