Updated design. Updated E2E post. Added some screens for portfolio

--- a/about.html
+++ b/about.html
@@ -37,19 +37,9 @@ permalink: /about/
         </div>
 
         <div class="carousel-item">
-          <div class="row">
-            <div class="col-xs-6">
-              <img src="{{'/images/photo-samples/sample4.jpg'|prepend:site.baseurl}}" alt="">
+          <img src="{{'/images/photo-samples/sample4.jpg'|prepend:site.baseurl}}" alt="">
 
-              <div class="carousel-caption">Cabo da Roca, Portugal</div>
-            </div>
-
-            <div class="col-xs-6">
-              <img src="{{'/images/photo-samples/sample5.jpg'|prepend:site.baseurl}}" alt="">
-
-              <div class="carousel-caption">Palacio de Pena, Portugal</div>
-            </div>
-          </div>
+          <div class="carousel-caption">Cabo da Roca, Portugal</div>
         </div>
 
         <div class="carousel-item">
@@ -73,6 +63,8 @@ permalink: /about/
     </div>
   </div>
 </div>
+
+<div class="vspace"></div>
 
 <div class="row m-y">
   <div class="col-xs-12 col-md-4">
