Refined About page. Moved Clojure guards from drafts to posts

--- a/about.html
+++ b/about.html
@@ -90,91 +90,8 @@ permalink: /about/
     <p>And the topics listed below dominate on this blog.</p>
 
     <div class="row">
-      <div class="col-xs-12 col-lg-6">
-        <ul class="media-list">
-          <li class="media">
-            <div class="media-left"><img src="{{ '/images/camera.jpg' }}" alt="" class="media-object"></div>
-            <div class="media-body">
-              <h4 class="media-heading">photography</h4>
-              <span>I use these for shooting photos:</span>
-              <ul>
-                <li>my girlfriend's Nikon D3100 with Nikkor 35mm / 1.8</li>
-                <li>my first DSLR, Pentax K-5 II with Pentax 18-135mm / 3.5</li>
-              </ul>
-            </div>
-          </li>
-
-          <li class="media">
-            <div class="media-left"><img src="{{ '/images/lambda.jpg' | prepend:site.baseurl }}" alt="lambda" class="media-object"></div>
-            <div class="media-body">
-              <h4 class="media-heading">functional programming</h4>
-              <ul>
-                <li>Erlang</li>
-                <li>Haskell</li>
-                <li>Clojure</li>
-              </ul>
-            </div>
-          </li>
-
-          <li class="media">
-            <div class="media-left"><img src="{{ '/images/atmel.jpg' | prepend:site.baseurl }}" alt="" class="media-object"></div>
-            <div class="media-body">
-              <h4 class="media-heading">assembly</h4>
-              <ul>
-                <li>NASM and assembly language</li>
-                <li>MCUs</li>
-              </ul>
-            </div>
-          </li>
-
-          <li class="media">
-            <div class="media-left"><img src="{{ '/images/interview.png' | prepend:site.baseurl }}" alt="" class="media-object"></div>
-            <div class="media-body">
-              <h4 class="media-heading">tips &amp; tricks:</h4>
-              <ul>
-                <li>interesting questions from interviews</li>
-                <li>different hacks and researches</li>
-              </ul>
-            </div>
-          </li>
-        </ul>
-      </div>
-
-      <div class="col-xs-12 col-lg-6">
-        <ul class="media-list">
-          <li class="media">
-          <div class="media-left"><img src="{{ '/images/rails.png' | prepend:site.baseurl}}" alt="" class="media-object"></div>
-          <div class="media-body">
-            <h4 class="media-heading">web development</h4>
-            <span>server-side:</span>
-            <ul>
-              <li>PHP</li>
-              <li>NodeJS</li>
-              <li>Rails</li>
-            </ul>
-
-            <span>client-side:</span>
-            <ul>
-              <li>CSS</li>
-              <li>JavaScript</li>
-              <li>Angular</li>
-            </ul>
-          </div>
-        </li>
-
-        <li class="media">
-          <div class="media-left"><img src="{{ '/images/ogre3d.png' | prepend:site.baseurl }}" alt="" class="media-object"></div>
-          <div class="media-body">
-            <h4 class="media-heading">3D graphics</h4>
-            <ul>
-              <li>OGRE 3D</li>
-              <li>Irrlicht</li>
-              <li>OpenGL</li>
-              <li>Blender</li>
-            </ul>
-          </div>
-        </li>
-      </ul>
+      <div class="col-xs-12">
+        <img src="{{ '/images/wordcloud.png' | prepend:site.baseurl }}" alt="Tags" class="img-fluid">
       </div>
     </div>
   </div>
@@ -182,8 +99,6 @@ permalink: /about/
 
 <div class="row">
   <div class="col-xs-12">
-    
-
     <!--<li class="media">
       (.media-left>img.media-object)+(.media-body>h4.media-heading+p)
     </li>-->
