--- a/contact.html
+++ b/contact.html
@@ -11,25 +11,24 @@ permalink: /contact/
 
   <div class="col-sm-6">
     <form action="//formspree.io/shybovycha@gmail.com" method="POST">
-      <fieldset class="form-group">
+      <div class="form-group">
         <input class="form-control" type="text" name="name" placeholder="Your name" required>
-      </fieldset>
+      </div>
 
-      <fieldset class="form-group">
+      <div class="form-group">
         <input class="form-control" type="email" name="_replyto" placeholder="Your e-mail" required>
-      </fieldset>
+      </div>
 
       <input class="form-control" type="hidden" name="_subject" value="Moo Foo Blog: new message!" />
       <input class="form-control" type="text" name="_gotcha" style="display:none" />
 
-      <fieldset class="form-group">
+      <div class="form-group">
         <textarea class="form-control" name="message" placeholder="Your message" rows="5" required></textarea>
-      </fieldset>
+      </div>
 
-      <fieldset class="form-group text-center">
-        <input class="btn btn-primary" type="submit" value="Send">
-      </fieldset>
+      <div class="form-group text-center">
+        <button class="btn btn-md" type="submit">Send</button>
+      </div>
     </form>
-
   </div>
 </div>
