Introduced a bunch of optimizations

--- a/_posts/tumblr/2015-04-23-assembly-in-c-programs.html
+++ b/_posts/tumblr/2015-04-23-assembly-in-c-programs.html
@@ -8,8 +8,9 @@ tags:
 - nasm
 - linux
 - c++
-tumblr_url: http://shybovycha.tumblr.com/post/117161684891/assembly-in-c-programs
+tumblr_url: 'http://shybovycha.tumblr.com/post/117161684891/assembly-in-c-programs'
 ---
+
 <h2>Foreword</h2>
 
 <p>Writing code in assembly language in 2015 seems stupid and meaningless. Yet, this subject has a few huge pros:</p>
