--- a/_posts/tumblr/2015-07-12-reactjs-introduction.html
+++ b/_posts/tumblr/2015-07-12-reactjs-introduction.html
@@ -377,7 +377,7 @@ provides developers with component architecture - HTML and JS encapsulation, but
 
 <p><strong>tweet-box.html:</strong></p>
 
-{% highlight html %}
+{% highlight mustache %}
   <div class="well clearfix">
     <textarea class="form-control" [(ng-model)]="text"></textarea>
     <br/>
