Optimized sample photos and other images

--- a/about.html
+++ b/about.html
@@ -9,43 +9,43 @@ permalink: /about/
     <div class="carousel">
       <div class="carousel-inner">
         <div class="carousel-item">
-          <img src="{{'/images/photo-samples/sample1.jpg'|prepend:site.baseurl}}" alt="">
+          <img src="{{'/images/photo-samples/sample1-compressed.jpg'|prepend:site.baseurl}}" alt="">
 
           <div class="carousel-caption">Pieniny, Poland</div>
         </div>
 
         <div class="carousel-item">
-          <img src="{{'/images/photo-samples/sample2.jpg'|prepend:site.baseurl}}" alt="">
+          <img src="{{'/images/photo-samples/sample2-compressed.jpg'|prepend:site.baseurl}}" alt="">
 
           <div class="carousel-caption">Prague, Czech Republic</div>
         </div>
 
         <div class="carousel-item">
-          <img src="{{'/images/photo-samples/sample3.jpg'|prepend:site.baseurl}}" alt="">
+          <img src="{{'/images/photo-samples/sample3-compressed.jpg'|prepend:site.baseurl}}" alt="">
 
           <div class="carousel-caption">Vienn, Austria</div>
         </div>
 
         <div class="carousel-item">
-          <img src="{{'/images/photo-samples/sample4.jpg'|prepend:site.baseurl}}" alt="">
+          <img src="{{'/images/photo-samples/sample4-compressed.jpg'|prepend:site.baseurl}}" alt="">
 
           <div class="carousel-caption">Cabo da Roca, Portugal</div>
         </div>
 
         <div class="carousel-item">
-          <img src="{{'/images/photo-samples/sample6.jpg'|prepend:site.baseurl}}" alt="">
+          <img src="{{'/images/photo-samples/sample6-compressed.jpg'|prepend:site.baseurl}}" alt="">
 
           <div class="carousel-caption">Oko Morskie, Poland</div>
         </div>
 
         <div class="carousel-item">
-          <img src="{{'/images/photo-samples/sample7.jpg'|prepend:site.baseurl}}" alt="">
+          <img src="{{'/images/photo-samples/sample7-compressed.jpg'|prepend:site.baseurl}}" alt="">
 
           <div class="carousel-caption">Park Ojcowski, Poland</div>
         </div>
 
         <div class="carousel-item">
-          <img src="{{'/images/photo-samples/sample8.jpg'|prepend:site.baseurl}}" alt="">
+          <img src="{{'/images/photo-samples/sample8-compressed.jpg'|prepend:site.baseurl}}" alt="">
 
           <div class="carousel-caption">Gdańsk, Poland</div>
         </div>
@@ -81,7 +81,7 @@ permalink: /about/
 
     <div class="row">
       <div class="col-xs-12">
-        <img src="{{ '/images/wordcloud.png' | prepend:site.baseurl }}" alt="Tags" class="img-fluid">
+        <img src="{{ '/images/wordcloud-compressed.png' | prepend:site.baseurl }}" alt="Tags" class="img-fluid">
       </div>
     </div>
   </div>
