--- a/gallery.html
+++ b/gallery.html
@@ -4,12 +4,34 @@ title: Gallery
 permalink: /gallery/
 ---
 
-<div class="gallery" style="display: flex; flex-wrap: wrap;">
-    <img src="/images/photo-samples/sample1.jpg" alt="" style="height: 200px; margin: 5px;" />
-    <img src="/images/photo-samples/sample2.jpg" alt="" style="height: 200px; margin: 5px;" />
-    <img src="/images/photo-samples/sample6.jpg" alt="" style="height: 200px; margin: 5px;" />
-    <img src="/images/photo-samples/sample3.jpg" alt="" style="height: 200px; margin: 5px;" />
-    <img src="/images/photo-samples/sample7.jpg" alt="" style="height: 200px; margin: 5px;" />
-    <img src="/images/photo-samples/sample4.jpg" alt="" style="height: 200px; margin: 5px;" />
-    <img src="/images/photo-samples/sample8.jpg" alt="" style="height: 200px; margin: 5px;" />
+<div class="carousel">
+  <div class="carousel-inner">
+    <div class="carousel-item">
+      <img src="/images/photo-samples/sample1-compressed.jpg" alt="Photo 1" />
+    </div>
+
+    <div class="carousel-item">
+      <img src="/images/photo-samples/sample2-compressed.jpg" alt="Photo 2" />
+    </div>
+
+    <div class="carousel-item">
+      <img src="/images/photo-samples/sample6-compressed.jpg" alt="Photo 3" />
+    </div>
+
+    <div class="carousel-item">
+      <img src="/images/photo-samples/sample3-compressed.jpg" alt="Photo 4" />
+    </div>
+
+    <div class="carousel-item">
+      <img src="/images/photo-samples/sample7-compressed.jpg" alt="Photo 5" />
+    </div>
+
+    <div class="carousel-item">
+      <img src="/images/photo-samples/sample4-compressed.jpg" alt="Photo 6" />
+    </div>
+
+    <div class="carousel-item">
+      <img src="/images/photo-samples/sample8-compressed.jpg" alt="Photo 7" />
+    </div>
+  </div>
 </div>
