Removed unused images and optimized existing ones

--- a/about.html
+++ b/about.html
@@ -58,7 +58,7 @@ permalink: /about/
 
 <div class="row m-y">
   <div class="col-xs-12 col-md-4 text-center m-y">
-    <img src="{{ '/images/photo-large.jpg' | prepend:site.baseurl }}" alt="photo-large" class="photo-large">
+    <img src="{{ '/images/photo-large-compressed.jpg' | prepend:site.baseurl }}" alt="photo-large" class="photo-large">
   </div>
 
   <div class="col-xs-12 col-md-8">
