--- a/_posts/tumblr/2014-09-04-carpatian-mountains-2014.html
+++ b/_posts/tumblr/2014-09-04-carpatian-mountains-2014.html
@@ -15,49 +15,49 @@ tumblr_url: http://shybovycha.tumblr.com/post/96614436936/2014
 
 <p>Після скількохсь-годинної поїздки ми прибули в Карпати. Ще далеко на під’їзді до спортивної бази &ldquo;Заросляк&rdquo;, від якої ми мали виходити пішки, зв’язку на мобільних телефонах вже не було, а GPS не ловив сигналу супутників. Мушу відмітити, що в такі дні, коли телефоном користуватись не грозить, відчуваєш цінність життя - починаєш дивитись довкола, спілкуватись з людьми, отримувати враження! А не намагатись поділитись якоюсь толікою того, що міг би відчути з купою людей, яких не знаєш&hellip;</p>
 
-<p><img src="https://lh3.googleusercontent.com/-rbd8Evdo354/VAhWcCsdy9I/AAAAAAAAXvA/RSatOoZV-gM/w969-h545-no/%D0%97%D0%BD%D1%96%D0%BC%D0%BE%D0%BA%2B%D0%B5%D0%BA%D1%80%D0%B0%D0%BD%D0%B0%2B%D0%B7%2B2014-09-03%2B16%3A12%3A15.png" alt='майже точний наш маршрут в сторону "туди"'/></p>
+<p><img src="{{ '/tumblr_files/carpathian_mountains_2014/route.png' | prepend: site.baseurl }}" alt='маршрут в сторону "туди"'/></p>
 
 <p>Так от, після того, як ми розпихали їжу по рюкзакам, трохи перекусили і як-небудь сфотографувались, ми вирушили в гору. Тобто, буквально. На самому початку походу спершу необхідно було підніматись до траверсу по не дуже зручній вимощеній здоровими каменюками дорозі, по якій до того ж стікав струмок. Але піднявшись, опинились ми на доволі гарній, хоч і дуже коротенькій лісо-смужці. Атмосферна така місцина. На нашому маршруті таких місць було кілька, але дуже приємно було що на самому початку походу вже такі гарні місця зустрілись.</p>
 
-<p><img src="https://lh3.googleusercontent.com/-3Pub4mqMvqw/U_xX2vb60CI/AAAAAAAAXJU/7MOoHmueKkM/w821-h545-no/IMGP2494.jpg" alt="фото лісосмуги на початку"/></p>
+<p><img src="{{ '/tumblr_files/carpathian_mountains_2014/IMGP2494.jpg' | prepend: site.baseurl }}" alt="лісосмуга на початку підйому"/></p>
 
 <p>Після лісосмужки ми вийшли на стежку, по якій траверсували щонайменше годину. Дуже пощастило нам з погодою. В усі дні і в усіх смислах. Серйозно! Чорногора славиться частими й різкими змінами погодних настроїв і любить жартувати над непідготованими туристами. Але в перший день погода була розкішна - сонячна й тепла. Навіть в горах, на висоті 2016 м. Вздовж всього траверсу і навіть далі, на невеликих висотах, росте купа ягід - переважно малина та чорниця. І вони, мушу сказати, кардинально відрізняються від того, що ви можете знайти в місті чи навіть в лісі - карпатські ягоди великі та дуже-дуже солодкі!</p>
 
 <div class="row">
     <div class="col-xs-12 col-md-4">
-        <img src="https://lh4.googleusercontent.com/-8ZsSyRpJDyE/U_xX4BNd1YI/AAAAAAAAXuI/RghggosGIVo/w362-h545-no/IMGP2499.jpg" alt="фото малинки" class="image-responsive" />
+        <img src="{{ '/tumblr_files/carpathian_mountains_2014/IMGP2499.jpg' | prepend: site.baseurl }}" alt="малина" class="image-responsive" />
     </div>
 
     <div class="col-xs-12 col-md-8">
-        <img src="https://lh5.googleusercontent.com/-Zryq8E4m8f4/U_xYAAvygVI/AAAAAAAAXK8/u8lYl9mcE7c/w821-h545-no/IMGP2539.jpg" alt="фото Люди, що збирає малинку" class="image-responsive" />
+        <img src="{{ '/tumblr_files/carpathian_mountains_2014/IMGP2539.jpg' | prepend: site.baseurl }}" alt="Люда збирає малинку" class="image-responsive" />
     </div>
 </div>
 
 <p>З часом, наше траверсування проходило через ліс та гірські річки. Вода в таких річках неймовірно чиста та смачна! Хоч вода і холодна, але не скуштувати її або бодай не вмитись нею було принаймні безглуздо - така нагода!..</p>
 
-<div class="text-center"><img src="https://lh5.googleusercontent.com/-cUUae7QUN2M/U_xYHVnRDxI/AAAAAAAAXMc/YgG7Dr47vTA/w362-h545-no/IMGP2602.jpg" alt="фото другої гірської річки"/></div>
+<div class="text-center"><img src="{{ '/tumblr_files/carpathian_mountains_2014/IMGP2602.jpg' | prepend: site.baseurl }}" alt="гірські річки"/></div>
 
 <p>Після першого привалу лісі, нас чекав довгий підйом. Власне, це був один довгий-довгий підйом ледь не до гори Гутин Томнатик, з невеликою рівниною довкола озера Несамовитого. Вже ближче до озера підйом став геть зовсім крутим і сісти відпочивати вже бувало часом необхідно - рюкзак постійно тягне в бік спуску, а фотокамеру втратити аж ніяк не хотілось!</p>
 
 <div class="row">
     <div class="col-xs-12 col-md-6">
-        <img src="https://lh6.googleusercontent.com/-ie2S8se28ZI/U_xYQtDZD2I/AAAAAAAAXOw/iH1HlVEye58/w821-h545-no/IMGP2677.jpg" alt="фото лінтяїв" class="image-responsive" />
+        <img src="{{ '/tumblr_files/carpathian_mountains_2014/IMGP2677.jpg' | prepend: site.baseurl }}" alt="лінтяї" class="image-responsive" />
     </div>
 
     <div class="col-xs-12 col-md-6">
-        <img src="https://lh3.googleusercontent.com/-5yKxxHc7f8c/U_xYSOsYCAI/AAAAAAAAXPI/qF5pIJJiIkI/w821-h545-no/IMGP2685.jpg" alt="ще одне фото лінтяїв" class="image-responsive" />
+        <img src="{{ '/tumblr_files/carpathian_mountains_2014/IMGP2685.jpg' | prepend: site.baseurl }}" alt="ще лінтяї" class="image-responsive" />
     </div>
 </div>
 
 <p>Але там зверху вже зовсім інша природа - дерева всі зводяться до кущів ялівцю, з ягід лишається лише чорниця, хмари здаються ближчими, вітер сильнішає, повітря вже відчувається холоднішим. Хтось зіграв цікавого жарту і, певне, переставив вказівник з поміткою &ldquo;оз. Несамовите - 100 м&rdquo;. Видно пожартував над усіма тими людьми, котрі не туристи, і ходять до озера просто як на спортивну таку прогулянку. Бо цю саму сотню метрів ми йшли з пів-години. І ось, нарешті, озеро Несамовите! Зблизька - нічого особливого - таку ж велику копанку з комишами можна побачити в кожному місті. Але після невеликого, хоч і крутого підйому, та ще й як хмари розійшлись, озеро повстало у всій своїй красі!</p>
 
-<div class="text-center"><img src="https://lh5.googleusercontent.com/-TOUtiKHZDp4/U_xXwlzPvHI/AAAAAAAAXH4/KX9zrQ7x2dA/w822-h545-no/Fotor0826123854.jpg" alt="фото озера Несамовитого"/></div>
+<div class="text-center"><img src="{{ '/tumblr_files/carpathian_mountains_2014/Fotor0826123854.jpg' | prepend: site.baseurl }}" alt="оз. Несамовите"/></div>
 
 <p>Після озера Несамовитого вже і краєвиди стали іншими - значно більш захоплюючими, ніж внизу, і шлях наш змінився з траверсування-піднімання на більш-менш спокійний підйом по хребтам гір. Зупинялись ми вже рідше - йти ж бо простіше!, фотографували більше - пейзажі захоплюючі! І от ми дійшли до стовпчика з вказівником &ldquo;г. Гутин Томнатик, 2016 м.&rdquo;, звідки вже видно озеро Бребенескул, до якого ми і йшли, щоб розбити наметове містечко. Тут же ми і розділились на три групки - одні пішли донизу, розбивати намети, інші - пішли на сусідню вершину, зоставивши рюкзаки, а решта - залишились охороняти рюкзаки та відпочивати.</p>
 
 <div class="row">
     <div class="col-xs-12 text-center">
-        <img src="https://lh5.googleusercontent.com/bvzrHD0r3DJrkH0-bUhiEwNVbNNFBBm25de79nvsE6Lf=w821-h545-no" alt="фото відпочинку перед спуском до Бребенескула" class="image-responsive" />
+        <img src="{{ '/tumblr_files/carpathian_mountains_2014/Fotor0826124146.jpg' | prepend: site.baseurl }}" alt="відпочинок перед спуском до оз. Бребенескул" class="image-responsive" />
     </div>
 </div>
 
@@ -65,25 +65,25 @@ tumblr_url: http://shybovycha.tumblr.com/post/96614436936/2014
 
 <div class="row">
     <div class="col-xs-12 text-center">
-        <img src="https://lh5.googleusercontent.com/-aQZut7APTBw/U_xnK3WRtmI/AAAAAAAAXoI/qO5QUk8HrVg/w1044-h150-no/IMGP2854-PANO.jpg" alt="фото вершини Гутина Томнатика" class="image-responsive" />
+        <img src="{{ '/tumblr_files/carpathian_mountains_2014/IMGP2854-PANO.jpg' | prepend: site.baseurl }}" alt="вершина Гутин-Томнатик" class="image-responsive" />
     </div>
 </div>
 
 <p>Спустившись, ми виявили що понад самим озером стоїть купа палаток. Тому вирішили розбити наметове містечко трохи далі, вниз від озера. Біля нас дуже тематично розташувались рєбята з м. Рівне. В цьому місці вже багато разів стояли туристи, що не можна було не помітити по слідам, залишеним нащадкам - купам сміття, дров та чомусь накшталт каміну з каменів. Навечір першого дня ми розвели багаття в цьому &ldquo;каміні&rdquo;. Розводили в сім пар рук, так як кожен привносив щось своє у сей процес. До настання темряви все ж вдалось нам зкип’ятити три казани води, набраної в одному з багатьох струмків поряд нас. Але хмари потроху насувались на небі&hellip;</p>
 
 <div class="text-center">
-    <img src="https://lh3.googleusercontent.com/hQYIbbTiYbdti2PHTf7lZ993fiub1l_z5lAfaW3IfGnj=w821-h545-no" alt="фото жменькаса і вогнища"/>
+    <img src="{{ '/tumblr_files/carpathian_mountains_2014/IMGP2977.jpg' | prepend: site.baseurl }}" alt="Жменькас і вогнище"/>
 </div>
 
 <p>Ранок другого дня зустрів нас сильним холодним дощем з вітром, ще години з третьої. Всі, хто мав паршивеньку палатку, або каремат, або спальник (о, ЯК я помилявся щодо свого спорядження!..) чудово розумілися. Туман щільно окутував долину і наше наметове містечко. Видно було максимум метрів на п’ять довкола. Дощ то пускався, то притихав, даючи нам змогу пообідати, поснідати і оцінити переваги газових горілок. Інколи туман трохи розходився і було видно силуети гір. В цей день ми всі сиділи в палатках, виходячи лиш щоб зварити або з’їсти пайок. З кожним новим поривом вітру доводилось все міцніше укріплювати імпровізовану кухню. І до вечора кухня перебазувалась в палатку Дмитра, який прибіг до мене в палатку зрання з криками <em>&ldquo;мою палатку залило!&rdquo;</em>.</p>
 
 <div class="row">
     <div class="col-xs-12 col-md-6">
-        <img src="https://lh4.googleusercontent.com/-Hl3hL45VRH8/U_xZBX7cZ9I/AAAAAAAAXYQ/g5U7-a9DBGo/w821-h545-no/IMGP3014.jpg" alt="фото кухні №1" class="image-responsive" />
+        <img src="{{ '/tumblr_files/carpathian_mountains_2014/IMGP3014.jpg' | prepend: site.baseurl }}" alt="кухня" class="image-responsive" />
     </div>
 
     <div class="col-xs-12 col-md-6">
-        <img src="https://lh6.googleusercontent.com/-iFyNMcUcIW4/U_xZEfrKzZI/AAAAAAAAXY4/8Q4yIGZs5O4/w362-h545-no/IMGP3030.jpg" alt="фото кухні №2" class="image-responsive" />
+        <img src="{{ '/tumblr_files/carpathian_mountains_2014/IMGP3030.jpg' | prepend: site.baseurl }}" alt="кухня" class="image-responsive" />
     </div>
 </div>
 
@@ -91,29 +91,29 @@ tumblr_url: http://shybovycha.tumblr.com/post/96614436936/2014
 
 <div class="row">
     <div class="col-xs-12 col-md-6">
-        <img src="https://lh3.googleusercontent.com/-2jNviFGZvYo/U_xZCmjCE6I/AAAAAAAAXYo/lGKs9ji_wyM/w821-h545-no/IMGP3021.jpg" alt="фото Жменькаса в дощ" class="image-responsive" />
+        <img src="{{ '/tumblr_files/carpathian_mountains_2014/IMGP3021.jpg' | prepend: site.baseurl }}" alt="Жменькас" class="image-responsive" />
     </div>
 
     <div class="col-xs-12 col-md-6">
-        <img src="https://lh6.googleusercontent.com/-eLgUTFgZF0M/U_xZGkPR30I/AAAAAAAAXZg/hqcDPzPDV3s/w362-h545-no/IMGP3055.jpg" alt="фото кухні №3" class="image-responsive" />
+        <img src="{{ '/tumblr_files/carpathian_mountains_2014/IMGP3055.jpg' | prepend: site.baseurl }}" alt="кухня" class="image-responsive" />
     </div>
 </div>
 
 <p>Тому другий день ми присвятили спілкуванню - хто просто балакав, хто грав в карти, хто жер горішки&hellip; А вдень до нас прибіг хлопчина з фразою <em>&ldquo;Рєбят, ви не бачили тут чоловік 15 з Києва? Я трошки не догнав групу&hellip;&rdquo;</em>. Повз нас проходило багато людей, що стояли понад самим озером, але на фото жодного з них хлопчина не впізнав, тому після невеликої бесіди з Ромкою, нашим провідником, було вирішено примостити Сергія в палатку до Славіка з Лєною.</p>
 
 <div class="text-center">
-    <img src="https://lh6.googleusercontent.com/-jSOSEvOIbgk/U_xZDug3g1I/AAAAAAAAXYw/vQb_FB2kHfw/w849-h545-no/IMGP3028.jpg" alt="фото тур. групи"/>
+    <img src="{{ '/tumblr_files/carpathian_mountains_2014/IMGP3028.jpg' | prepend: site.baseurl }}" alt="тур. група"/>
 </div>
 
 <p>На ранок після дощу було дуже-дуже холодно надворі, але сонечко вже пробивалось крізь хмари й туман і гори було видно вже краще. Можна було навіть розгледіти чорницю, яка росла на тій галявині. І це був найбільш позитивний варіант &ldquo;як добиратись назад&rdquo; із тих, що у нас були на випадок дощу.</p>
 
 <div class="row">
     <div class="col-xs-12 col-md-6">
-        <img src="https://lh5.googleusercontent.com/-ZjDaSUdmGdU/U_xZkNZyiXI/AAAAAAAAXfs/qIgSFa8GuZM/w821-h545-no/IMGP3305.jpg" alt="фото чорничного куща" class="image-responsive" />
+        <img src="{{ '/tumblr_files/carpathian_mountains_2014/IMGP3305.jpg' | prepend: site.baseurl }}" alt="чорниця" class="image-responsive" />
     </div>
 
     <div class="col-xs-12 col-md-6">
-        <img src="https://lh3.googleusercontent.com/-I1VwSr6zpXY/U_xZKJqYKZI/AAAAAAAAXaM/VX5GkBvR5GQ/w821-h545-no/IMGP3156.jpg" alt="фото палатки Юлі" class="image-responsive" />
+        <img src="{{ '/tumblr_files/carpathian_mountains_2014/IMGP3156.jpg' | prepend: site.baseurl }}" alt="палатка Юлі" class="image-responsive" />
     </div>
 </div>
 
@@ -121,11 +121,11 @@ tumblr_url: http://shybovycha.tumblr.com/post/96614436936/2014
 
 <div class="row">
     <div class="col-xs-12 col-md-6">
-        <img src="https://lh3.googleusercontent.com/-Lv2qFmxYI2U/U_xZivZOrvI/AAAAAAAAXfY/Et29tj2dv8I/w883-h545-no/IMGP3293.jpg" alt="фото як Рома збирає палатку за допомогою Люди" class="image-responsive" />
+        <img src="{{ '/tumblr_files/carpathian_mountains_2014/IMGP3293.jpg' | prepend: site.baseurl }}" alt="Рома збирає палатку за допомогою Люди" class="image-responsive" />
     </div>
 
     <div class="col-xs-12 col-md-6">
-        <img src="https://lh3.googleusercontent.com/-Gh4D6Ye3AeA/U_xZjRnX_OI/AAAAAAAAXfk/83KWXIsBJjA/w821-h545-no/IMGP3296.jpg" alt="фото як Сергійко фоткає всіх" class="image-responsive" />
+        <img src="{{ '/tumblr_files/carpathian_mountains_2014/IMGP3296.jpg' | prepend: site.baseurl }}" alt="Сергійко робить фото групи" class="image-responsive" />
     </div>
 </div>
 
@@ -133,11 +133,11 @@ tumblr_url: http://shybovycha.tumblr.com/post/96614436936/2014
 
 <div class="row">
     <div class="col-xs-12 col-md-6">
-        <img src="https://lh3.googleusercontent.com/-8Aq0eKbhEAY/U_xZrabHlwI/AAAAAAAAXhM/GJfbXjUpcqM/w821-h545-no/IMGP3344.jpg" alt="фото групи на фоні гір і туману" class="image-responsive" />
+        <img src="{{ '/tumblr_files/carpathian_mountains_2014/IMGP3344.jpg' | prepend: site.baseurl }}" alt="тур. група і туман" class="image-responsive" />
     </div>
 
     <div class="col-xs-12 col-md-6">
-        <img src="https://lh3.googleusercontent.com/-kFM2j8l_nB4/U_xZwZLX2cI/AAAAAAAAXiA/Zk-VZuDUN8U/w821-h545-no/IMGP3372.jpg" alt="фото туманіща" class="image-responsive" />
+        <img src="{{ '/tumblr_files/carpathian_mountains_2014/IMGP3372.jpg' | prepend: site.baseurl }}" alt="туман" class="image-responsive" />
     </div>
 </div>
 
@@ -145,15 +145,15 @@ tumblr_url: http://shybovycha.tumblr.com/post/96614436936/2014
 
 <div class="row">
     <div class="col-xs-12 col-md-4">
-        <img src="https://lh6.googleusercontent.com/-4dMa73y35Bo/U_xZ1aX2KkI/AAAAAAAAXjE/jNiMq1hlpw4/w821-h545-no/IMGP3386.jpg" alt="фото гір Шпиці" class="image-responsive" />
+        <img src="{{ '/tumblr_files/carpathian_mountains_2014/IMGP3386.jpg' | prepend: site.baseurl }}" alt="Шпиці" class="image-responsive" />
     </div>
 
     <div class="col-xs-12 col-md-4">
-        <img src="https://lh5.googleusercontent.com/-lRLWYylmP98/U_xZ6JUOo_I/AAAAAAAAXjo/lzigf5jNs3A/w821-h545-no/IMGP3449.jpg" alt="фото Сергійка на фоні гір" class="image-responsive" />
+        <img src="{{ '/tumblr_files/carpathian_mountains_2014/IMGP3449.jpg' | prepend: site.baseurl }}" alt="Сергійко" class="image-responsive" />
     </div>
 
     <div class="col-xs-12 col-md-4">
-        <img src="https://lh3.googleusercontent.com/-BQ9Q3the7ZM/U_xaBNWEMtI/AAAAAAAAXk4/ipB8oS6hz48/w821-h545-no/IMGP3489.jpg" alt="фото Сергійка та двох жінок" class="image-responsive" />
+        <img src="{{ '/tumblr_files/carpathian_mountains_2014/IMGP3489.jpg' | prepend: site.baseurl }}" alt="Сергійко" class="image-responsive" />
     </div>
 </div>
 
